Boton editar en tarjeta producto

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyect2025</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
+    <meta name="google-site-verification" content="A6Bv_K_KCY_Uk8I7KVuYTrAR2mdsfBfVQ_sSR05yEWs" />
+    <title>SmartBusiness</title>
   </head>
   <body>
     <div id="root"></div>
