--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/ferreteria_selva_logo.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no" />
-    <meta name="google-site-verification" content="A6Bv_K_KCY_Uk8I7KVuYTrAR2mdsfBfVQ_sSR05yEWs" />
-    <title>SmartBusiness</title>
+    <title>Proyecto 2025</title>
   </head>
   <body>
     <div id="root"></div>
